# EnjoyYourRoad

./: .gitignore  CMakeLists.txt  FragmentShader.fs  LICENSE  README.md  VertexShader.vs  a.md  aabb.cpp  aabb.hpp  bike.dds  bottom.vs  cubeShader.vs  depth.fs  dsb.DDS  dust.xbm  main  main.cpp  run.py  shadow.cpp  skybox.cpp  skybox.h  suzanne.dds  terrain.cpp  terrain.hpp  xsb.dds
common/: aabb.cpp  aabb.hpp  controls.cpp  controls.hpp  objloader.cpp  objloader.hpp  shadow.cpp  shadow.h  skybox.cpp  terrain.cpp  text2D.cpp
resources/texture/: bike.DDS  bottom.DDS  norm.dds  outUV.dds  rock.DDS  rock2.DDS  rock3.DDS  rock4.DDS  rock5.DDS  tree.DDS  wall.DDS  water.DDS  waters.DDS  wheel.DDS
shaders/: VertexShader.vs  cubeShader.fs
